force-app/main/default/objects/OCLQS_Transaction_Log__c/OCLQS_Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Object for Transaction Logs - Master Object
Build By Integration Team</description>
    <label>Integration Log</label>
    <nameField>
        <label>Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>