force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to mark active/inactive transactions.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>