force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JFS</fullName>
            </value>
            <value>
                <fullName>ODE</fullName>
            </value>
            <value>
                <fullName>JFS&amp;ODE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>