force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Custom_Metadata_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Metadata_Integration_Type__c</fullName>
    <label>Custom Metadata Label Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCII_FBI</fullName>
            </value>
            <value>
                <fullName>CBOSS</fullName>
            </value>
            <value>
                <fullName>ODE</fullName>
            </value>
            <value>
                <fullName>OnBase</fullName>
            </value>
            <value>
                <fullName>SAFE</fullName>
            </value>
            <value>
                <fullName>OCCRRA</fullName>
            </value>
            <value>
                <fullName>EVENT_MONITOR</fullName>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>PFCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>