force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Fail_Count__c.field-meta.xml
<CustomField>
    <fullName>Fail_Count__c</fullName>
    <label>Fail Count</label>
    <summaryFilterItems>
        <field>OCLQS_Transaction_Monitor__c.Status__c</field>
        <operation>equals</operation>
        <value>Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>OCLQS_Transaction_Monitor__c.Transaction_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>