force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCII/FBI</fullName>
            </value>
            <value>
                <fullName>CBOSS</fullName>
            </value>
            <value>
                <fullName>CDC Web</fullName>
            </value>
            <value>
                <fullName>CP/IPR</fullName>
            </value>
            <value>
                <fullName>CPI</fullName>
            </value>
            <value>
                <fullName>OCCRRA</fullName>
            </value>
            <value>
                <fullName>OCLQS-ORACLE</fullName>
            </value>
            <value>
                <fullName>OEDS</fullName>
            </value>
            <value>
                <fullName>OnBase</fullName>
            </value>
            <value>
                <fullName>SAFE</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>PFCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>