force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Success_Count__c.field-meta.xml
<CustomField>
    <fullName>Success_Count__c</fullName>
    <label>Success Count</label>
    <summaryFilterItems>
        <field>OCLQS_Transaction_Monitor__c.Status__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>OCLQS_Transaction_Monitor__c.Transaction_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>