force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <formula>Fail_Count__c +  Success_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>