force-app/main/default/objects/OCLQS_Transaction_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>ESB</fullName>
            </value>
            <value>
                <fullName>SFDC Scheduled Job</fullName>
            </value>
            <value>
                <fullName>SFDC Error Handler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>