force-app/main/default/objects/OCLQS_Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Source__c</columns>
    <columns>Target__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Success_Count__c</columns>
    <columns>Fail_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>